# ai-investment-analyst

./: .env.example  .gitignore  APPLICATION_GUIDE.docx  APPLICATION_GUIDE.md  README.md  interview_prep.md  investment_report_MSFT.md  investment_report_NVDA.md  investment_report_TSLA.md  main.py  pyproject.toml
frontend/: app.py  requirements.txt
src/agents/: agents.py  crew.py  tasks.py
src/agents/tools/: financial.py  publisher.py  scraper.py
src/api/: main.py  models.py  routes.py
src/shared/: config.py  database.py  storage.py
